tests/positive/pr112_character_case.safe
-- Test: pr112_character_case
-- Description: Character literals, string literals, and character-based case.
-- Expected: ACCEPT

package pr112_character_case

   marker : constant character = 'A';
   fallback : constant string = "needs work";

   function grade_message (grade : in character) returns string

      case grade
         when 'A'
            return "excellent";

         when 'B'
            return "good";

         when others
            return fallback;





