tests/negative/neg_case_string_choice.safe
-- Test: neg_case_string_choice
-- Description: String literals are not admitted as PR11.2 case-arm choices.
-- Expected: REJECT unsupported_source_construct

package Neg_Case_String_Choice

   function Opcode_Name (Opcode : in Integer) returns String

      case Opcode
         when "reset"
            return "bad";

         when others
            return "ok";

